--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,11 @@
         }
     ],
     "require": {
-        "klipper/maker-bundle": "^2.0.0",
         "klipper/functional-test-bundle": "^2.0.0",
-        "doctrine/doctrine-fixtures-bundle": "^3.0.0",
-        "sensiolabs/security-checker": "^5.0.0",
-        "symfony/browser-kit": "^4.4.0",
-        "symfony/debug-bundle": "^4.4.0",
-        "symfony/dotenv": "^4.4.0",
-        "symfony/phpunit-bridge": "^4.4.0",
-        "symfony/stopwatch": "^4.4.0",
-        "symfony/web-link": "^4.4.0",
-        "symfony/web-profiler-bundle": "^4.4.0",
-        "symfony/web-server-bundle": "^4.4.0"
+        "klipper/maker-bundle": "^2.0.0",
+        "symfony/debug-pack": "^1.0.0",
+        "symfony/process": "^4.4.0",
+        "symfony/test-pack": "^1.0.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
