--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-2.0": "2.0-dev"
+            "dev-main": "2.0-dev"
         }
     }
 }
